--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <script src="https://kit.fontawesome.com/a31fdd5831.js" crossorigin="anonymous"></script>
+
+    <link href="https://fonts.googleapis.com/css?family=Catamaran:800|Open+Sans&display=swap" rel="stylesheet">
+    <title>Floral Park Mental Health</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
